--- a/Cs348fiNALnotES.docx/app/src/main/res/layout/activity_main.xml
+++ b/Cs348fiNALnotES.docx/app/src/main/res/layout/activity_main.xml
@@ -66,4 +66,16 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/switch_button" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/email_field"
+        android:layout_marginTop="34dp"
+        android:id="@+id/password_field"
+        android:hint="Type your password"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
