--- a/Cs348fiNALnotES.docx/app/src/main/res/layout/activity_retrieve.xml
+++ b/Cs348fiNALnotES.docx/app/src/main/res/layout/activity_retrieve.xml
@@ -30,4 +30,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:textSize="20sp" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="154dp"
+        android:id="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
